--- a/index.html
+++ b/index.html
@@ -149,6 +149,26 @@
         <!-- "reach out" section -->
         <section id="reach-out">
             <h2>Reach Out</h2>
+            <div class="contact-info">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3530.2472712721533!2d-80.40353608498323!3d27.7713541827654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88de5cd18ff552bb%3A0x53497c84f962ca88!2s171%20Beachside%20Dr%2C%20Orchid%2C%20FL%2032963!5e0!3m2!1sen!2sus!4v1591209814307!5m2!1sen!2sus"
+                 width="400" height="400" frameborder="0" style="border:0;" allowfullscreen="">
+                </iframe>
+            </div>
+            <div>
+                <h3>Run Buddy</h3>
+                <p>
+                    Any questions or concerns before signing up?
+                    <br/>
+                    Let us know and we'll be happy to help you!
+                </p>
+                <address>
+                    55 Main Street<br/>
+                    Some Town, CA<br/>
+                    12345<br/>
+                    P: 555.RUN.BUDZ (555.786.2839)<br/>
+                    E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                </address>
+            </div>
         </section>
 
         <!-- footer -->
