--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -8,7 +8,7 @@
 </head>
 <body>
         <!--navigation -->    
-        <header">
+        <header>
             <h1>
                 <a href="/"></a>RUN BUDDY</a>
             </h1>
