--- a/index.html
+++ b/index.html
@@ -81,16 +81,21 @@
 
         <!-- "what we do" section -->
         <section id="what-we-do" class="intro">
+            <div class="flex-row">
             <h2 class="section-title primary-border">What We Do</h2>
-            <p>
-                butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumbir normcore banksy trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Furture Austin fingerstached pickled twee synth Wed Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
-            </p>
+            </div>
+            <div class="flex-row">
+                <p>
+                    butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumbir normcore banksy trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Furture Austin fingerstached pickled twee synth Wed Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
+                </p>
+            </div>
         </Section>
 
         <!-- "what you do" section -->
         <section id="what-you-do" class="steps">
-            <h2 class="section-title secondary-border">What You Do</h2>
-            
+            <div class="flex-row">
+                <h2 class="section-title secondary-border">What You Do</h2>
+            </div>
             <div>
                 <!-- insert this img element -->
                 <img src="./assets/images/step-1.svg" alt=""/>
@@ -119,9 +124,11 @@
 
         <!-- "meet your trainers" section -->
         <section id="your-trainers" class="trainers">
-            <h2 class="section-title primary-border">
-                Meet Your Trainers
-            </h2>
+            <div class="flex-row">
+                <h2 class="section-title primary-border">
+                    Meet Your Trainers
+                </h2>
+            </div>
             <!-- First Trainer -->
             <article class="trainer">
                 <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
@@ -159,7 +166,9 @@
 
         <!-- "reach out" section -->
         <section id="reach-out" class="contact">
-            <h2 class="section-title secondary-border">Reach Out</h2>
+            <div class="flex-row">
+                <h2 class="section-title secondary-border">Reach Out</h2>
+            </div>
             <div class="contact-info">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3530.2472712721533!2d-80.40353608498323!3d27.7713541827654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88de5cd18ff552bb%3A0x53497c84f962ca88!2s171%20Beachside%20Dr%2C%20Orchid%2C%20FL%2032963!5e0!3m2!1sen!2sus!4v1591273590554!5m2!1sen!2sus"
                  frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
