--- a/index.html
+++ b/index.html
@@ -213,16 +213,33 @@
 
         <!-- Service Plans using GRID -->
         <section id="service-plans" class="services">
-            <div class="service-grid-container">
-                <div class="service-grid-item">One</div>
-                <div class="service-grid-item">Two</div>
-                <div class="service-grid-item">Three</div>
-                <div class="service-grid-item">Four</div>
-                <div class="service-grid-item">Five</div>
-                <div class="service-grid-item">Six</div>
-              </div>
 
+            <h2 class="section-title secodary-border">
+                Our Service Plans
+            </h2>
 
+            <div class="service-grid-wrapper">
+                <div class="service-grid-container">
+                    
+                    <!-- Headers -->
+                    <div class="service-grid-item grit-head basic">Basic</div>
+                    <div class="service-grid-item grit-head premium">Premium</div>
+
+                    <!-- Body -->
+                    <div class="service-grid-item basic">Support Offered Bewteen 9-5</div>
+                    <div class="service-grid-item premium">24/7 Plan Support</div>
+                    <div class="service-grid-item basic">Bi-weekly Trainer Calls</div>
+                    <div class="service-grid-item premium">Weekly Trainer Calls</div>
+                    <div class="service-grid-item basic">N/A</div>
+                    <div class="service-grid-item premium">Discounts At Select RUnning Stores</div>
+                    <div class="service-grid-item both">Subscription to Run Buddy's Health Magazine!</div>
+                    <div class="service-grid-item grit-price basic">$10/mo</div>
+                    <div class="service-grid-item grit-price premium">$25/mo</div>
+                    <div class="service-grid-item cancel">Cancel At Any Time!</div>
+
+                </div>
+            </div>           
+                
         </section>
 
 
